fixed pendingGuest li on mobile, looks decent on mobile now overall

--- a/RSVP/src/App.css
+++ b/RSVP/src/App.css
@@ -76,9 +76,7 @@ li{
   margin-left: 2rem;
 }
 
-.pending-guest-li{
-  margin-top: -10px
-}
+
 
 
 
@@ -113,9 +111,6 @@ li{
   width: 25%;
   height: 30px;
   font-size: 20px;
-  /*
-  margin-top: 10px;
-  left: 500px;*/
 }
 
 .invite-guest-input:focus{
@@ -140,18 +135,6 @@ li{
   margin-top: 25px;
   font-size: 1.2rem
 }
-/*
-.guestCheckboxLabel{
-  font-family: 'quicksand';
-  font-size: .8rem;
-  margin-top: 0px;
-  margin-right: 50px;
-}
-.guestCheckbox{
-  margin-top:10px;
-  margin-right: 120px;
-}*/
-
 
 
 /*-------------------------------------------------------------------------*/
@@ -173,13 +156,7 @@ li{
    padding:10px 25px;
    text-decoration:none;
    text-shadow:0px 1px 0px #3d768a;
-   border-radius: 10px;
-   /*
-   position: relative;
-   left:500px;
-   bottom:2px;
-   display:inline-block;*/
-   
+   border-radius: 10px; 
  }
 
 
@@ -197,22 +174,7 @@ li{
   border-radius: 10px;
   padding:5px
 }
-/*
-.edit-button{
-  margin-right: 150px;
-  margin-top: 15px;
-  padding-left: 8%;
-  padding-right: 8%
-  
-}*/
 
-/*
-.remove-button{
- position: relative;
-  margin-top:0px;
-  margin-left: -90px
-
-}*/
 
 
 @media(max-width:479px){
@@ -230,6 +192,11 @@ li{
   .add-guest-button{
     margin-left:110px;
     margin-top:10px;
+  }
+
+  .pending-guest-li{
+    margin-top: 20px;
+    float:left;
   }
 
   li{
